fix(dev): improve logging visibility and HTTP request tracking
- Configure concurrently with colored prefixes for WEB and API logs
- Add preserveWatchOutput to prevent log clearing on recompilation
- Implement HTTP request logging interceptor in NestJS API
- Add Vite middleware plugin for HTTP request logging
- Update API response to return structured JSON with metadata
- Enable CORS and verbose logging in API bootstrap
- Configure Vite in non-interactive mode with clearScreen disabled

This resolves the issue where frontend logs were being cleared by the API
and enables proper monitoring of HTTP requests in both services during
development.

--- a/apps/api/tsconfig.build.json
+++ b/apps/api/tsconfig.build.json
@@ -1,4 +1,5 @@
 {
   "extends": "./tsconfig.json",
-  "exclude": ["test", "**/*.spec.ts"]
+  "exclude": ["test", "**/*.spec.ts"],
+  "preserveWatchOutput": true
 }
