--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "node": ">=20"
   },
   "scripts": {
-    "dev": "concurrently -n api,web -c blue,green \"pnpm -C apps/api start:dev\" \"pnpm -C apps/web dev\"",
+    "dev": "concurrently --kill-others-on-fail --prefix-colors \"green.bold,blue.bold\" --prefix \"[{name}]\" --names \"WEB,API\" --handle-input \"cd apps/web && pnpm dev -- --host 127.0.0.1\" \"cd apps/api && pnpm start:dev\"",
     "build": "pnpm -r run build",
     "lint": "eslint \"apps/api/**/*.{ts,tsx}\" \"apps/web/**/*.{ts,tsx}\" \"packages/shared-types/src/**/*.ts\"",
     "format": "prettier --write .",
