--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -8,5 +8,6 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true
-  }
+  },
+  "preserveWatchOutput": true
 }
