fix(ci): correct pnpm setup order in GitHub Actions
- Move pnpm installation before setup-node
- Fix 'Unable to locate executable file: pnpm' error
- Ensure pnpm is available when setup-node tries to use cache

chore(devcontainer): enable git authentication in dev container

- Add git and github-cli features for better git integration
- Mount host SSH keys to enable SSH authentication
- Enable terminal authentication for VS Code git operations

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,6 +3,13 @@
   "build": {
     "dockerfile": "Dockerfile"
   },
+  "features": {
+    "ghcr.io/devcontainers/features/git:1": {},
+    "ghcr.io/devcontainers/features/github-cli:1": {}
+  },
+  "mounts": [
+    "source=${localEnv:HOME}${localEnv:USERPROFILE}/.ssh,target=/home/node/.ssh,readonly,type=bind,consistency=cached"
+  ],
   "postCreateCommand": "pnpm install",
   "postStartCommand": "pnpm lint && pnpm build",
   "forwardPorts": [3000, 5173],
@@ -21,7 +28,10 @@
         "ms-vscode.vscode-github-issue-notebooks",
         "openai.chatgpt",
         "prisma.prisma"
-      ]
+      ],
+      "settings": {
+        "git.terminalAuthentication": true
+      }
     }
   }
 }
