--- a/package.json
+++ b/package.json
@@ -9,7 +9,17 @@
     "build": "pnpm -r run build",
     "lint": "eslint \"apps/api/**/*.{ts,tsx}\" \"apps/web/**/*.{ts,tsx}\" \"packages/shared-types/src/**/*.ts\"",
     "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "format:check": "prettier --check .",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{json,md,yml,yaml}": [
+      "prettier --write"
+    ]
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
@@ -19,6 +29,8 @@
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "globals": "^15.12.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.7",
     "prettier": "^3.8.1"
   }
 }
